# nextjs-test

./: .gitattributes  56.gitignore  Cargo.toml  crypto-audit.js  lerna.json  package.json  pnpm-lock.yaml  pr-1.js  pr-10.js  pr-100.js  pr-1000.js  pr-101.js  pr-102.js  pr-103.js  pr-104.js  pr-105.js  pr-106.js  pr-107.js  pr-108.js  pr-109.js  pr-11.js  pr-110.js  pr-111.js  pr-112.js  pr-113.js  pr-114.js  pr-115.js  pr-116.js  pr-117.js  pr-118.js  pr-119.js  pr-12.js  pr-120.js  pr-121.js  pr-122.js  pr-123.js  pr-124.js  pr-125.js  pr-126.js  pr-127.js  (+968 more)
.devcontainer/: Dockerfile  base.Dockerfile  devcontainer.json
.github/: labeler.json
.github/workflows/: build_and_deploy.yml  build_and_test.yml  build_reusable.yml  ci.yml  code_freeze.yml  codeql.yml  codspeed.yml  docker-publish.yml  google-cloudrun-source.yml  node.js.yml  notify_release.yml  nowsecure.yml  pull_request_stats.yml  test_e2e_deploy_release.yml  trigger_release.yml  trigger_release_new.yml  turbopack-benchmark.yml  turbopack-update-tests-manifest.yml  upload-tests-manifest.yml  webpack.yml
crates/napi/: Cargo.toml
scripts/: create-preview-tarballs.js
test/: deploy-tests-manifest.json  ppr-tests-manifest.json  rspack-build-tests-manifest.json  rspack-dev-tests-manifest.json  turbopack-build-tests-manifest.json  turbopack-dev-tests-manifest.json
turbopack/crates/turbo-rcstr/: Cargo.toml
turbopack/crates/turbo-rcstr/src/: dynamic.rs  lib.rs  serde.rs
turbopack/crates/turbo-tasks-hash/: Cargo.toml
turbopack/crates/turbo-tasks-hash/src/: deterministic_hash.rs  xxh3_hash64.rs
(+959 files in other folders)
