[package]
name = "turbo-rcstr"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
atom_size_64 = []
atom_size_128 = []
napi = ["dep:napi"]

[dependencies]
triomphe = { workspace = true }
turbo-tasks-hash = { workspace = true }
serde = { workspace = true }
new_debug_unreachable = "1.0.6"
shrink-to-fit = { workspace = true }
bytes-str = { workspace = true }
indexmap = { workspace = true }
rustc-hash = { workspace = true }
scoped-tls = "1.0.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
napi = { workspace = true, optional = true }
scoped-tls = "1.0.1"
indexmap = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "mod"
harness = false
