[package]
name = "turbo-tasks-hash"
version = "0.1.0"
description = "TBD"
license = "MIT"
edition = "2024"
autobenches = false

[lib]
bench = false

[lints]
workspace = true

[dependencies]
turbo-tasks-macros = { workspace = true }
twox-hash = { workspace = true, features = [
  "xxhash3_64",
  "xxhash3_128",
  "std",
] }
